@@ -58,13 +58,13 @@ else
     CPPFLAGS="${CPPFLAGS} ${CAIRO_CPPFLAGS}"
     LIBS="${LIBS} ${CAIRO_LIBS}"
 
-     AC_CACHE_CHECK([whether cairo including pango is >= 1.2 and works], 
+     AC_CACHE_CHECK([whether cairo including pango is >= 1.0 and works], 
 		    [r_cv_cairo_works], [AC_LINK_IFELSE([
 #include <pango/pango.h>
 #include <pango/pangocairo.h>
 #include <cairo-xlib.h>
-#if CAIRO_VERSION  < 10200
-#error cairo version >= 1.2 required
+#if CAIRO_VERSION  < 10000
+#error cairo version >= 1.0 required
 #endif
 int main(void) {
     cairo_t  *CC;
@@ -89,7 +89,8 @@ int main(void) {
     ])
     if test "x${r_cv_has_cairo}" = "xyes"; then
       modlist="cairo"
-      for module in cairo-xlib cairo-png; do
+      ## on Linux, cairo-ft brings in header paths <cairo-ft.h> needs
+      for module in cairo-xlib cairo-png cairo-ft; do
 	if "${PKGCONF}" --exists ${module}; then
 	  modlist="${modlist} ${module}"
 	fi
@@ -113,12 +114,12 @@ int main(void) {
       CPPFLAGS="${CPPFLAGS} ${CAIRO_CPPFLAGS}"
       LIBS="${LIBS} ${CAIRO_LIBS}"
 
-      AC_CACHE_CHECK([whether cairo is >= 1.2 and works], 
+      AC_CACHE_CHECK([whether cairo is >= 1.0 and works], 
 		     [r_cv_cairo_works], [AC_LINK_IFELSE([
 #include <cairo.h>
 #include <cairo-xlib.h>
-#if CAIRO_VERSION  < 10200
-#error cairo version >= 1.2 required
+#if CAIRO_VERSION  < 10000
+#error cairo version >= 1.0 required
 #endif
 int main(void) {
     cairo_t  *CC;    
