@@ -50,6 +50,7 @@
     cairo_set_source_rgba
     cairo_set_source_surface
     cairo_status
+    cairo_status_to_string
     cairo_stroke
     cairo_surface_destroy
     cairo_surface_status
@@ -99,7 +100,12 @@ static void CairoColor(unsigned int col, pX11Desc xd)
     green = pow(green, GreenGamma);
     blue = pow(blue, BlueGamma);
     
-    cairo_set_source_rgba(xd->cc, red, green, blue, alpha/255.0); 
+    /* These optimizations should not be necessary, but alpha = 1
+       seems to cause image fallback in some backends */
+    if (alpha == 255)
+	cairo_set_source_rgb(xd->cc, red, green, blue); 
+    else
+	cairo_set_source_rgba(xd->cc, red, green, blue, alpha/255.0); 
 }
 
 static void CairoLineType(const pGEcontext gc, pX11Desc xd)
@@ -408,15 +414,22 @@ PangoCairo_Text(double x, double y,
 /* ------------- cairo-ft section --------------- */
 
 /* FIXME: although this should work on all platforms, I didn't get to
-   test it (yet) anywhere else, hence the __APPLE__ condition for now [SU] */
+   test it (yet) anywhere else, hence the __APPLE__ condition for now [SU] 
+   r44621: now works on Linux, just finds the same fonts as before. [BDR]
+*/
 #if CAIRO_HAS_FT_FONT && __APPLE__
 /* FT implies FC in Cairo */
 #include <cairo-ft.h>
 
 static cairo_font_face_t *default_faces[5];
-static const char *default_patterns[5] = { "Helvetica:style=Regular", "Helvetica:style=Bold",
-					   "Helvetica:style=Italic", "Helvetica:style=Bold Italic,BoldItalic",
-					   "Symbol" };
+static const char *default_patterns[5] = {
+    "Helvetica:style=Regular", 
+    "Helvetica:style=Bold",
+    "Helvetica:style=Italic", 
+    "Helvetica:style=Bold Italic,BoldItalic",
+    "Symbol" 
+};
+
 static int fc_loaded;
 static FT_Library ft_library;
 
@@ -425,7 +438,8 @@ static FT_Library ft_library;
 #define FE_Unicode  0
 
 /* use FC to find a font, load it in FT and return the Cairo FT font face */
-static cairo_font_face_t *FC_getFont(const char *fcname, int encoding) {
+static cairo_font_face_t *FC_getFont(const char *fcname, int encoding) 
+{
     FcFontSet *fs;
     FcPattern *pat, *match;
     FcResult  result;
@@ -454,9 +468,9 @@ static cairo_font_face_t *FC_getFont(const char *fcname, int encoding) {
     if (fs) {
         int j = 0;
 	while (j < fs->nfont) /* find the font file and use it with FreeType */
-	    if (FcPatternGetString (fs->fonts[j++], FC_FILE, 0, &file) == FcResultMatch) {
+	    if (FcPatternGetString (fs->fonts[j++], FC_FILE, 0, &file) 
+		== FcResultMatch) {
 	        FT_Face face;
-		FT_Error er;
 		FT_CharMap charmap;
 		int n;
 		
@@ -465,16 +479,17 @@ static cairo_font_face_t *FC_getFont(const char *fcname, int encoding) {
 		    FcFontSetDestroy (fs);  
 		    return NULL;
 		}
-		if (!FT_New_Face(ft_library, file, 0, &face)) {
+		if (!FT_New_Face(ft_library, (const char *) file, 0, &face)) {
 #if 0
-		  for (n = 0; n < face->num_charmaps; n++ ) {
-		    charmap = face->charmaps[n];
-		    printf("   charmap%d: enc=%d platf=%d\n", n, charmap->encoding_id, charmap->platform_id);
-		  }
+		    for (n = 0; n < face->num_charmaps; n++) {
+			charmap = face->charmaps[n];
+			printf("   charmap%d: enc=%d platf=%d\n", n, 
+			       charmap->encoding_id, charmap->platform_id);
+		    }
 #endif
 
 		    if (encoding)
-		        for (n = 0; n < face->num_charmaps; n++ ) {
+		        for (n = 0; n < face->num_charmaps; n++) {
 			    charmap = face->charmaps[n];
 			    if (charmap->platform_id == encoding) {
 			        FT_Set_Charmap( face, charmap );
@@ -522,9 +537,13 @@ static void FT_getFont(pGEcontext gc, pDevDesc dd)
     char *family = "Helvetica";
     int slant = CAIRO_FONT_SLANT_NORMAL, wt  = CAIRO_FONT_WEIGHT_NORMAL;
 
+    char *fm = gc->fontfamily;
+    if(streql(fm, "mono")) family = "courier";
+    else if(streql(fm, "serif")) family = "times";
+    else if(streql(fm, "sans")) family = "helvetica";
+    else if(fm[0]) family = fm;
     if (face < 1 || face > 5) face = 1;
     if (face == 5) family = "Symbol";
-    else if (gc->fontfamily[0]) family = gc->fontfamily;
     if (face == 2 || face == 4) wt = CAIRO_FONT_WEIGHT_BOLD;
     if (face == 3 || face == 4) slant = CAIRO_FONT_SLANT_ITALIC;
   
